# gpt4-autoeval

./: .gitignore  inference.sh  origin.txt  pyproject.toml  rebuild.py  requirements.txt  run-script-simple.sh  setup-script.sh
assets/elyza_tasks_100/: openai_responses.json
assets/elyza_tasks_100/GPT3.5/: preds.jsonl  result.jsonl
assets/elyza_tasks_100/GPT4o/: preds.jsonl  result.jsonl
assets/elyza_tasks_100/Qwen2.5-32B-Instruct-GPTQ-Int8/: preds.jsonl  result.jsonl
assets/elyza_tasks_100/Qwen2.5-32B-Int4/: preds.jsonl  result.jsonl
assets/elyza_tasks_100/Qwen2.5-7B-Instruct/: preds.jsonl
assets/elyza_tasks_100/gemma-2-27b-it-GPTQ/: preds.jsonl
notebooks/: ELYZA_tasks_100_inference_GPT3.5.ipynb  ELYZA_tasks_100_inference_GPT4o.ipynb  ELYZA_tasks_100_inference_Qwen2.5_32B_INT4.ipynb  ELYZA_tasks_100_inference_Qwen2.5_32B_Instruct_GPTQ_Int8.ipynb
src/: grade_calc.py  inference.py  inference.sh  inference_gemma.py
src/judges/openai/gpt_4/: sequential_process.py
src/lib/: client_openai.py
